FIX for nav position on tablet

--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -1,3 +1,51 @@
 
 @import 'bootstrap_config/responsive.scss'; //Core bootstrap responsive components
 
+// LARGE DESKTOP & UP
+// ------------------
+
+/*
+@media (min-width: 1200px) {
+
+}
+*/
+
+
+// ANYTHING SMALLER THAN DEFAULT DESKTOP 
+// ----------------------------------
+
+/*
+@media (max-width: 979px) {
+
+}
+*/
+
+
+// PORTRAIT TABLET TO DEFAULT DESKTOP
+// ----------------------------------
+
+@media (min-width: 768px) and (max-width: 979px) {
+	.navbar .container {
+		width: 724px;
+	}
+}
+
+
+// LANDSCAPE PHONE TO SMALL DESKTOP & PORTRAIT TABLET
+// --------------------------------------------------
+
+/*
+@media (max-width: 767px) {
+
+}
+*/
+
+
+// UP TO LANDSCAPE PHONE
+// ---------------------
+
+/*
+@media (max-width: 480px) {
+
+}
+*/
